fix wrong color

--- a/css/download.scss
+++ b/css/download.scss
@@ -130,7 +130,7 @@ main span {
 }
 
 .version {
-	background-color: #3b4249;
+	background-color: #343A40;
 	color: #fff;
 }
 
